-Alterado os modelos das coleções
